# BrightBridgeTraining

./: manage.py  pyproject.toml
brightbridge/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  apps.py  context_processors.py  middleware.py  models.py  signals.py  urls.py  utilities.py  views.py
core/fixtures/: core_pages_navlinks.json
core/migrations/: 0001_initial.py  0002_alter_page_table_comment_alter_profile_table_comment_and_more.py
core/templates/: base.html  navbar.html  profile.html
core/templates/components/: _alpine-counter.html  _alpine-modal.html  _hero.html  _timer.html
data_collection/: models.py
data_collection/migrations/: 0001_initial.py
starter/: settings.py
