[project]
    name = "django-starter"
    version = "0.2.0"
    description = ""
    authors = [
        {name = "Kyle Jensen",email = "kyle@nullandvoid.digital"}
    ]
    requires-python = ">=3.12"
    dependencies = [
        "python~=3.12",
        "django~=5.1",
        "whitenoise~=6.7",
        "pip~=25.0.1"

    ]
[dependency-groups]
dev = [
    "ipython",
    "black[d]",
    "setuptools~=82.0",
    "django-extensions",
    "django-debug-toolbar",
    "werkzeug~=3.1.3",
    "pygraphviz~=1.14"
]
prod = []