[project]
name = "brightbridge_training_and_onboarding"
version = "0.2.0"
description = ""
authors = [
    {name = "Kyle Jensen",email = "kyle@nullandvoid.digital"}
]
requires-python = ">=3.12"
dependencies = [
    "django~=6.0",
    "whitenoise~=6.7",
    "pip>=26.1",
    "django-allauth[socialaccount]>=65.18.0",
]
[dependency-groups]
dev = [
    "ipython",
    "black[d]",
    "setuptools~=82.0",
    "django-extensions",
    "django-debug-toolbar",
    "werkzeug~=3.1.3",
    "pygraphviz~=1.14"
]
prod = []
